--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://fibersisi.github.io/xiaoyaoyou-sound-art"
   "name": "xiaoyaoyou:-kunpeng-sound-art",
   "private": true,
   "version": "0.0.0",
